added javascript functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="./scripts.js"></script>
     <title>Sabir's CV</title>
 </head>
 
@@ -83,40 +82,48 @@
             </div>
 
             <div class="section">
-                <h3 class="section-heading">Profile</h3>
-                <p>Web & Mobile app developer with 2+ years experience in developing front end web applications using
-                    top
-                    industry technologies including React, React native, Angular and Ionic. I have developed several
-                    large applications using these technologies using opitmized and efficient code.</p>
+                <h3 class="section-heading collapsible">Profile</h3>
+                <div class="content">
+                    <p>Web & Mobile app developer with 2+ years experience in developing front end web applications
+                        using
+                        top
+                        industry technologies including React, React native, Angular and Ionic. I have developed several
+                        large applications using these technologies using opitmized and efficient code.</p>
+                </div>
             </div>
 
             <div class="section">
-                <h3 class="section-heading">Work Experiece</h3>
-                <div class="sub-section">
-                    <div class="subsection-header">
-                        <h4 class="subsection-heading">Freelance Developer</h4>
-                        <p>Upwork & Fiverr | Karachi | Jan 2020 - Present</p>
+                <h3 class="section-heading collapsible">Work Experiece</h3>
+                <div class="content">
+                    <div class="sub-section">
+                        <div class="subsection-header">
+                            <h4 class="subsection-heading">Freelance Developer</h4>
+                            <p>Upwork & Fiverr | Karachi | Jan 2020 - Present</p>
+                        </div>
+                        <p>Working on web and mobile applications using React, React native, Angular and Ionic. Have
+                            worked
+                            on serveral small to medium sized projects so far. </p>
                     </div>
-                    <p>Working on web and mobile applications using React, React native, Angular and Ionic. Have worked
-                        on serveral small to medium sized projects so far. </p>
-                </div>
-                <div class="sub-section">
-                    <div class="subsection-header">
-                        <h4 class="subsection-heading">Junior Front End Developer</h4>
-                        <p>InApp Solutions | Karachi | June 2019 - Dec 2019</p>
+                    <div class="sub-section">
+                        <div class="subsection-header">
+                            <h4 class="subsection-heading">Junior Front End Developer</h4>
+                            <p>InApp Solutions | Karachi | June 2019 - Dec 2019</p>
+                        </div>
+                        <p>Worked on a task management application using react and redux.</p>
                     </div>
-                    <p>Worked on a task management application using react and redux.</p>
-                </div>
-                <div class="sub-section">
-                    <div class="subsection-header">
-                        <h4 class="subsection-heading">Internee Web Developer</h4>
-                        <p>AppBakerz Solutions | Karachi | June 2018 - Dec 2018</p>
+                    <div class="sub-section">
+                        <div class="subsection-header">
+                            <h4 class="subsection-heading">Internee Web Developer</h4>
+                            <p>AppBakerz Solutions | Karachi | June 2018 - Dec 2018</p>
+                        </div>
+                        <p>Worked on a school management system application using react as an internee.</p>
                     </div>
-                    <p>Worked on a school management system application using react as an internee.</p>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
+<script src="./scripts.js"></script>
 
 </html>
